// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PullQuotes test on ios Pull Quotes with a Caption 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "TimesModern-Regular",
          "fontSize": 75,
          "marginBottom": -40,
          "marginTop": 0,
        },
        Object {
          "color": "#696969",
        },
      ]
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "marginBottom": 0,
            "paddingTop": 4,
          },
          Object {
            "color": "#696969",
          },
        ]
      }
    >
      Judge Sapnara
    </Text>
  </View>
</View>
`;

exports[`PullQuotes test on ios Pull Quotes with a Caption and a Twitter 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "TimesModern-Regular",
          "fontSize": 75,
          "marginBottom": -40,
          "marginTop": 0,
        },
        Object {
          "color": "#696969",
        },
      ]
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "marginBottom": 0,
            "paddingTop": 4,
          },
          Object {
            "color": "#696969",
          },
        ]
      }
    >
      Judge Sapnara
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderLeftColor": "#696969",
          "borderLeftWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "height": 15,
          "marginLeft": 7,
          "paddingLeft": 7,
        }
      }
    >
      <svg
        height={10}
        style={Object {}}
        viewBox="-354.2 -279.4 750 600"
        width={12}
      >
        <path
          d="M391.3-210.7c-28.9,10.9-57.8,21.7-86.7,25.3c32.5-18.1,54.2-50.6,68.7-83.1c-28.9,18.1-61.5,28.9-97.6,36.1 c-28.9-28.9-68.7-47-112-47c-83.1,0-151.8,68.7-151.8,151.8c0,10.8,0,25.3,3.6,36.1c-126.5-7.3-238.6-68.7-314.5-159 c-14.5,21.7-21.7,50.6-21.7,75.9c0,54.2,25.3,101.2,68.7,126.5c-25.3,0-47-7.2-68.7-18.1c0,0,0,0,0,3.6 c0,72.3,54.2,137.4,122.9,148.2c-14.5,3.6-25.3,3.6-39.7,3.6c-10.9,0-18.1,0-28.9-3.6c18.1,61.5,75.9,104.8,141,104.8 c-50.6,39.8-119.3,65.1-188,65.1c-10.8,0-25.3,0-36.1-3.6c68.7,43.3,148.2,68.7,234.9,68.7C167.2,320.6,319,89.3,319-113.1 c0-7.2,0-14.4,0-18.1C344.3-152.9,369.6-181.8,391.3-210.7z"
          fill="#006699"
          style={Object {}}
        />
      </svg>
      <Text
        accessibilityRole="link"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        href="https://twitter.com/@henrywinter"
        onPress={[Function]}
        style={
          Array [
            Object {
              "textDecorationLine": "underline",
            },
            Object {
              "color": "#006699",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 13,
              "marginLeft": 3,
              "paddingTop": 4,
              "textDecorationLine": "none",
            },
          ]
        }
      >
        @henrywinter
      </Text>
    </View>
  </View>
</View>
`;

exports[`PullQuotes test on ios Pull Quotes without a Caption 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "TimesModern-Regular",
          "fontSize": 75,
          "marginBottom": -40,
          "marginTop": 0,
        },
        Object {
          "color": "#696969",
        },
      ]
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "marginBottom": 0,
            "paddingTop": 4,
          },
          Object {
            "color": "#696969",
          },
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`PullQuotes test on ios Pull Quotes without a Caption and different colours 1`] = `
<View
  style={
    Object {
      "marginBottom": 0,
      "marginTop": 0,
      "paddingBottom": 25,
      "paddingLeft": 10,
      "paddingRight": 10,
      "paddingTop": 5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "TimesModern-Regular",
          "fontSize": 75,
          "marginBottom": -40,
          "marginTop": 0,
        },
        Object {
          "color": "#850029",
        },
      ]
    }
  >
    “
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Regular",
        "fontSize": 25,
        "lineHeight": 30,
      }
    }
  >
    [The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 20,
        "marginTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "marginBottom": 0,
            "paddingTop": 4,
          },
          Object {
            "color": "#850029",
          },
        ]
      }
    >
      Judge Sapnara
    </Text>
  </View>
</View>
`;
